# ChangeLog for Gentoo System Intialization ("rc") scripts
# Copyright 1999-2006 Gentoo Foundation; Distributed under the GPLv2

  15 Aug 2006; Roy Marples <uberlord@gentoo.org>:

    Support old gateway variable with iproute2.
    arpinging of available address can be disabled with
    modules=( "!arping" )

  14 Aug 2006; Roy Marples <uberlord@gentoo.org>:

    Only send a process the TERM signal once, #141832

    Set frequency, channel and ap after ESSID, #143716 thanks to damage.

  13 Aug 2006; Roy Marples <uberlord@gentoo.org>:

    Remove silly dhcpcd version check. Drop -o from dhcpcd options as
    all dhcpcd versions in portage have been patches to not bring the interface
    down and future versions may not support that option as they won't bring
    the interface down at all.

    Fix frequency parsing and add channel parsing to iwconfig, #143698

    Start dhclient on the right interface, #130670 thanks to Petr Svoboda.

  04 Aug 2006; Roy Marples <uberlord@gentoo.org>:

    Add bootchart suppport, #74425 and #141114. Thanks to Paul Pacheco.

* baselayout-1.12.4 (02 Aug 2006)

  02 Aug 2006; Roy Marples <uberlord@gentoo.org>:

    Updated tarball.sh to make clean before making the tarball, bug #142457

* baselayout-1.12.2 (01 Aug 2006)

  26 Jul 2006; Roy Marples <uberlord@gentoo.org>:

    wpa_supplicant now launches even when wireless radio has been killed
    as if the user enables it then it will associate and work without the 
    user having to restart the interface.

  20 Jul 2006; Roy Marples <uberlord@gentoo.org>:

    Enable RC_NEED="foo" and RC_USE="bar" in /etc/conf.d/${SERVICE}
    so that users can overlay service dependencies with their own.
    Bug #140865

  18 Jul 2006; Roy Marples <uberlord@gentoo.org>:

    Report services scheduled to be started by another service as
    started OK for splash.

  12 Jul 2006; Roy Marples <uberlord@gentoo.org>:

    Add bootmisc as a CRITICAL_SERVICE as too many init scripts don't