@@ -86,15 +86,13 @@ rc_shift_args() {
 #
 # Setup our vars based on the start-stop-daemon command
 rc_setup_daemon_vars() {
-	local name i
-	local -a sargs=( "${args%% \'--\' *}" )
-	local -a eargs
-	local x="${args// \'--\' /}"
+	local -a sargs=( "${args%% \'--\' *}" ) eargs=()
+	local x="${args// \'--\' /}" i=
 	[[ ${x} != "${args}" ]] && eargs=( "${args##* \'--\' }" )
 
 	eval rc_shift_args "${sargs[@]}"
 
-	[[ -z ${cmd} ]] && cmd="${name}"
+	[[ -n ${name} ]] && cmd="${name}"
 
 	# We may want to launch the daemon with a custom command
 	# This is mainly useful for debugging with apps like valgrind, strace
@@ -354,7 +352,7 @@ update_service_status() {
 # how we are called
 start-stop-daemon() {
 	local args="$( requote "$@" )" result i
-	local cmd pidfile pid stopping signal nothing=false 
+	local cmd name pidfile pid stopping signal nothing=false 
 	local daemonfile=
 	local -a RC_DAEMONS=() RC_PIDFILES=()
 
